--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://jaymickey.github.io"
+baseURL = "https://mickey.dev"
 title = "Josh Michielsen (Jmickey)"
 theme = "KeepIt"
 copyright = "2019 Josh Michielsen"
