--- a/config.toml
+++ b/config.toml
@@ -26,7 +26,7 @@ pygmentsCodefences = true
     height = 40
 
 [Permalinks]
- posts = "/posts/:filename"
+ posts = "/posts/:slug"
 
  [menu]
   [[menu.main]]
