--- a/config.toml
+++ b/config.toml
@@ -21,12 +21,12 @@ pygmentsCodefences = true
       height = 40
 
   [params.logo]
-    url = "logo.png"
+    url = "/logo.png"
     width = 127
     height = 40
 
   [params.image]
-    url = "cover.jpg"
+    url = "/cover.jpg"
     width = 800
     height = 600
 
