update github username

--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ googleAnalytics = "UA-140141781-1"
     email = "j@mickey.dev"
 
 [params.social]
-  Github = "jaymickey"
+  Github = "jmickey"
   Linkedin = "jmichielsen"
   Twitter = "jmickey_"
   Email = "j@mickey.dev"
