--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,27 @@
 [build]
   publish = "public"
-  command = "hugo"
+  command = "hugo --gc --minify"
 
 [build.environment]
-  HUGO_VERSION = "0.55.5"
+  HUGO_VERSION = "0.58.3"
   HUGO_ENV = "staging"
-  HUGO_ENABLEGITINFO = "true"
 
 [context.production]
   command = "hugo --gc --minify -b ${URL}/"
 
 [context.production.environment]
   HUGO_ENV = "production"
+  HUGO_VERSION = "0.58.3"
+  HUGO_ENABLEGITINFO = "true"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.58.3"
 
 [context.deploy-preview]
-  command = "hugo -b ${DEPLOY_PRIME_URL}/"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
 [context.branch-deploy]
-  command = "hugo -b ${DEPLOY_PRIME_URL}/"
+  command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+
+[context.next.environment]
+  HUGO_ENABLEGITINFO = "true"
