--- a/config.toml
+++ b/config.toml
@@ -63,7 +63,8 @@ pygmentsCodefences = true
 [params]
   author = "Josh Michielsen"
   subtitle = "Senior Software Engineer @ Snyk"
-  subtitle_additional = "Software Engineering, Kubernetes, TypeScript, Go, Container Security, Cycling, Photography, Coffee"
+  subtitle_additional = "Software Engineering, Kubernetes, TypeScript, Go, Container Security"
+  subtitle_additional_2 = "Cycling, Photography, Coffee"
   description = "Aussie 🇦🇺 in Cambridge 🇬🇧. Senior Software Engineer, Snyk. Previously Platforms and Kubernetes at Condé Nast. #doge owner. Photographer 📷"
   socialShare = true
 
