--- a/config.toml
+++ b/config.toml
@@ -62,7 +62,7 @@ pygmentsCodefences = true
 
 [params]
   author = "Josh Michielsen"
-  subtitle = "Senior Software Engineer @ Snyk"
+  subtitle = "Technical Lead @ Weaveworks"
   subtitle_additional = "Platform & Software Engineering, Kubernetes, Go, GitOps, Container Security"
   subtitle_additional_2 = "Cycling, Photography, Coffee"
   description = "Aussie 🇦🇺 in Cambridge 🇬🇧. Technical Lead @ Weaveworks. Previously Container & Kubernetes Security @ Synk, and Platforms & Kubernetes @ Condé Nast. #doge owner. Photographer 📷"
